# cryd-compiler

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  毕昇杯答辩-从容应队.pptx
arm_test/func_test/: test_single.sh
arm_test/lib/: makelib.sh
arm_test/perf_test/: test_all.sh
arm_test/tools/: add_newline.cpp
doc/: arm_log.md  ast_specification.md  detailed_design.docx  lir_specification.md  mir_specification.md  update_log.md
gen_src/: lexer.ll.cpp  lexer.ll.h  parser.yy.cpp  parser.yy.hpp
src/: CMakeLists.txt  main.cpp
src/back_end/: arm.cpp  arm.h  arm_define.cpp  arm_define.h  arm_manager.cpp  arm_manager.h  arm_struct.cpp  arm_struct.h  live.cpp  live.h  reg_alloc.cpp  reg_alloc.h
src/front_end/: ast.cpp  ast.h  lexer.h  lexer.l  parser.y  semantic_analysis.cpp  semantic_analysis.h
src/global/: bitmap.cpp  bitmap.h  interval.cpp  interval.h  symbol_table.cpp  symbol_table.h  type_define.cpp  type_define.h
src/ir/: cfg.cpp  cfg.h  cfg_manager.cpp  cfg_manager.h  ir_define.cpp  ir_define.h  ir_instr.cpp  ir_instr.h  ir_symbol_table.cpp  ir_symbol_table.h  ir_test_manager.cpp  ir_test_manager.h  linear_ir_manager.cpp  linear_ir_manager.h  lower_ir_manager.cpp  lower_ir_manager.h
src/optimizer/: array_visit_substitution_on_ssa.cpp  array_visit_substitution_on_ssa.h  auto_memorize.cpp  auto_memorize.h  block_simplification.cpp  block_simplification.h  constant_array_visit_substitution.cpp  constant_array_visit_substitution.h  constant_fold_and_algebraic_simplification.cpp  constant_fold_and_algebraic_simplification.h  constant_fold_ast.cpp  constant_fold_ast.h  constant_recombination.cpp  constant_recombination.h  convert_ssa.cpp  convert_ssa.h  dead_call_elimination.cpp  dead_call_elimination.h  dead_code_elimination.cpp  dead_code_elimination.h  forward_substitution.cpp  forward_substitution.h  global_array_visit_substitution.cpp  global_array_visit_substitution.h  global_common_subexpression_elimination.cpp  global_common_subexpression_elimination.h  global_variable_localization.cpp  global_variable_localization.h  if_to_switch.cpp  if_to_switch.h  instruction_combination.cpp  instruction_combination.h  (+32 more)
testcase/: func_test_filename.txt  gen_func_asm.bat  gen_func_asm.sh  gen_func_asm_single.bat  gen_func_asm_single.sh  gen_perf_asm.bat  gen_perf_asm_single.bat  perf_test_filename.txt  sylib.c  sylib.h  test.bat  test_func.bat  test_func.sh  test_func_single.bat  test_func_single.sh  test_ir2c.bat  test_perf.bat  test_perf_single.bat
(+1 files in other folders)
